--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,10 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
     <head>
-        <script type="text/javascript" src="/static/js/lib/jquery-3.3.1.min.js"></script>
+        <link href="/static/css/lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <script src="/static/js/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
     </head>
     <body>
-        <title>Hello from Flask</title>
-        <h1>Hello {{ name }}, you visited this page {{ count }} times!</h1>
+        <div class="container" style="width: 60%">
+            <div>
+                <div style="width: 100%">
+                    <img src="/static/images/docker-flask.png" width="100%">
+                    <p>
+                        <h3 class="text-center">Hello {{ name }}, you visited this page {{ count }} times!</h3>
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
