--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,6 +14,7 @@
                     <p>
                         <h3 class="text-center">Hello {{ name }}, you visited this page {{ count }} times!</h3>
                     </p>
+                    <a href="http://0.0.0.0:5454">Go back</a>
                 </div>
             </div>
         </div>
