Project version with Kubernetes [skip-ci]

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -22,7 +22,7 @@
                         <h6 class="text-center">{{ text|safe }}</h6>
                         <p class="text-center">
                             {{ delete_link|safe }}
-                            <a href="http://0.0.0.0">Go back</a>
+                            <a href="/">Go back</a>
                         </p>
                     </p>
                 </div>
